// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Breadcrumb rendering renders expected elements 1`] = `
<div
  className="Breadcrumb"
>
  <nav
    aria-label="Breadcrumb"
    className="Breadcrumb__crumbs"
  >
    <ol
      className="Breadcrumb__list"
    >
      <BreadcrumbItem />
    </ol>
  </nav>
</div>
`;

exports[`Breadcrumb rendering renders expected elements when optional properties are set 1`] = `
<div
  className="Breadcrumb"
>
  <nav
    aria-label="Breadcrumb"
    className="Breadcrumb__crumbs"
  >
    <ol
      className="Breadcrumb__list"
    >
      <BreadcrumbItem />
      <li
        className="Breadcrumb__current"
      >
        Test
      </li>
    </ol>
  </nav>
</div>
`;
